ci: use JDK 19